fix: remove visible scrollbars in fullscreen media view

--- a/packages/frontend/scss/gallery/_attachment-view.scss
+++ b/packages/frontend/scss/gallery/_attachment-view.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(49, 49, 49, 1);
+  overflow: hidden;
 
   img,
   video {
